samples/_failures_safe/1761329609_e7f1d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c884e84.c: In function ‘main’:
./samples/SAFE/__tmp_8c884e84.c:147:25: error: missing terminating " character
  147 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_8c884e84.c:147:9: error: expected expression at end of input
  147 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_8c884e84.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c884e84.c:147:9: error: expected declaration or statement at end of input
